@@ -74,33 +74,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!-- Provided dependencies -->
-
-        <!-- Runtime dependencies -->
-
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Managed Dependencies -->
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.apache.santuario</groupId>
             <artifactId>xmlsec</artifactId>
         </dependency>
+        
+        <!-- Provided dependencies -->
+
+        <!-- Runtime dependencies -->
         <dependency>
             <groupId>${xerces.groupId}</groupId>
             <artifactId>xml-apis</artifactId>
@@ -120,6 +101,19 @@
         <dependency>
             <groupId>${xalan.groupId}</groupId>
             <artifactId>xalan</artifactId>
+        </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
