@@ -4,7 +4,6 @@
     xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
     
     <id>bin</id>
-    
     <formats>
         <format>tar.gz</format>
         <format>zip</format>
@@ -19,9 +18,12 @@
             <includes>
                 <include>*:jar:*</include>
             </includes>
+            <excludes>
+                <exclude>*:jcip-annotations:*</exclude>
+            </excludes>
         </dependencySet>
         <dependencySet>
-            <outputDirectory>/endorsed</outputDirectory>
+            <outputDirectory>/lib/endorsed</outputDirectory>
             <directoryMode>774</directoryMode>
             <fileMode>444</fileMode>
             <scope>runtime</scope>
@@ -46,22 +48,6 @@
         <fileSet>
             <directory>doc/</directory>
             <outputDirectory>/doc</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/apidocs</directory>
-            <outputDirectory>/doc/api</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/style</directory>
-            <outputDirectory>/doc/style</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/unitTest</directory>
-            <outputDirectory>/doc/unitTest</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/xref</directory>
-            <outputDirectory>/doc/src-xref</outputDirectory>
         </fileSet>
     </fileSets>
     
